--- a/autoencoder.ipynb
+++ b/autoencoder.ipynb
@@ -28,7 +28,7 @@
    },
    "source": [
     "# Autoencoder\n",
-    "In this question, we will try to implement **autoencoder(AE)** for dimensionality reduction using `pytorch`. We will test our model on peripheral blood mononuclear cells(PBMCs) single-cell gene expression dataset.\n",
+    "We will try to implement **autoencoder(AE)** for dimensionality reduction using `pytorch`. We will test our model on peripheral blood mononuclear cells(PBMCs) single-cell gene expression dataset.\n",
     "\n",
     "An autoencoder consists of two part: \n",
     "\n",
