Update and rename hw3_1.ipynb to clustering algorithms.ipynb

--- a/clustering algorithms.ipynb
+++ b/clustering algorithms.ipynb
@@ -20,10 +20,8 @@
         "id": "dRw8whWVO847"
       },
       "source": [
-        "# HW3-1: Comparison of different clustering algorithms\n",
-        "In our lecture, we talked about **K-means clustering**, **spectral clustering** and **Leiden clustering(a modified version of louvain clustering algorithm)**. \n",
-        "\n",
-        "In this homework, we will play around with those three algorithms on different datasets, and see how those algorithms perform in different circumstances."
+        "# Comparison of different clustering algorithms\n",
+        "We will play around with those three algorithms on different datasets, and see how those algorithms perform in different circumstances."
       ]
     },
     {
